--- a/src/modules/email/template/register.code.ejs
+++ b/src/modules/email/template/register.code.ejs
@@ -31,6 +31,6 @@
     const nav = document.querySelector('.nav')
     nav.style = undefined;
     nav.style['margin-left'] = '200px';
-    console.log('111');
+    // console.log('111');
   }, 8000)
 </script>
